--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
   <div *ngIf="!router.url.includes('pesquisa/responder')"   style="flex-grow: 1; display: flex; flex-direction: column">
     <!-- Cabeçalho -->
     <div style="height: 72px; width: 100%; display: flex; justify-content: space-between; align-items: center;">
-      <h2 style="margin-left: 2rem">Great Place To Work</h2>
+      <h2 style="margin-left: 2rem">Clima Organizacional Kleiner</h2>
 
       <div style="margin-right: 1rem;">
       <button *ngIf="isLoggedIn()"
