Validação de resposta, envio via whatsapp, gerar links
Efetuado implementação da validação de link de resposta por id, implementado CRUD de links, assim como envio dos mesmos via whatsapp ao serem gerados

--- a/src/app/components/pesquisa/responder/responder.component.html
+++ b/src/app/components/pesquisa/responder/responder.component.html
@@ -263,3 +263,18 @@
 </div>
 <p-toast></p-toast>
 <app-modal-boas-vindas></app-modal-boas-vindas>
+
+<!--  MODAL ID INVÁLIDO  -->
+  <p-dialog
+    header="Link Inválido"
+    [(visible)]="displayModalLinkInvalido"
+    [modal]="true"
+    [closable]="false"
+    [dismissableMask]="true"
+    [style]="{ width: '400px' }"
+    >
+    <p>O link acessado é inválido. Por favor, verifique o link ou entre em contato com o administrador.</p>
+
+  </p-dialog>
+
+  
