--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -49,6 +49,15 @@
       </div>
     </div>
 
+    <div class="grafico">
+      <h4>Quantidade de Respostas por Área</h4>
+      <p-chart
+        type="bar"
+        [data]="chartQtdRespostasArea"
+        [options]="chartOptions"
+      ></p-chart>
+    </div>
+
     <div class="linha-grafico full-width">
       <div class="grafico-expandido">
         <h4>Notas por Pergunta</h4>
