--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -49,8 +49,8 @@
       </div>
     </div>
 
-    <div class="linha-grafico">
-      <div class="grafico-expandido">
+    <div class="linha-grafico" style="justify-content: center;">
+      <div class="grafico-expandido-mid">
         <h4>Quantidade de Respostas por Área</h4>
         <p-chart
           type="bar"
