--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex; height: 100vh; width: 100%">
   <!-- Barra Lateral Esquerda -->
-  <div  *ngIf="!router.url.includes('pesquisa/responder')"  style="height: 100%; padding: 8px">
+  <div  *ngIf="!router.url.includes('pesquisa/responder') && !router.url.includes('login')"  style="height: 100%; padding: 8px">
     <div style="display: flex; justify-content: center"> 
       <img
         src="favicon.png"
@@ -21,10 +21,10 @@
   <!-- Área Principal -->
   <div *ngIf="!router.url.includes('pesquisa/responder')"   style="flex-grow: 1; display: flex; flex-direction: column">
     <!-- Cabeçalho -->
-    <div style="height: 72px; width: 100%; display: flex; justify-content: space-between; align-items: center;">
+    <div style="height: 72px; flex-grow: 1; display: flex; justify-content: space-between; align-items: center;" *ngIf="!router.url.includes('login')">
       <h2 style="margin-left: 2rem">Clima Organizacional Kleiner</h2>
 
-      <div style="margin-right: 1rem;">
+      <div style="margin-right: 3rem;">
       <button *ngIf="isLoggedIn()"
         icon="pi pi-sign-out"
         label="Sair"
